--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "tsparticles": "^1.34.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
