--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.6.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.5.3",
