--- a/src/utils/project.json
+++ b/src/utils/project.json
@@ -1,39 +1,50 @@
 {
   "projects": [ 
-    {
-      "id": "animalTesting",
-      "name": "animal Testing",
-      "img": ["coming-soon"]
-    },
        {
       "id": "bloomin",
       "name": "bloomin",
-      "img": ["bloomin1","bloomin2"]
+      "img": ["bloomin1","bloomin2"],
+      "logo": "bloomin_logo.jpeg",
+      "url": "https://bloomin.co/",
+      "tags": ["mobile", "react native","redux","firebase", "native base"]
     },
        {
-      "id": "les resto de Paris",
-      "name": "les resto de Paris",
-      "img": ["restos2Paris1","restos2Paris2","restos2Paris3"]
+      "id": "les restos de Paris",
+      "name": "les restos de Paris",
+      "img": ["restos2Paris1","restos2Paris2","restos2Paris3"],
+      "tags": ["web", "react","express.js","mysql", "passport.js", "material ui"]
     },
         {
       "id": "zappo",
       "name": "zappo",
-      "img": ["zappo1","zappo2","zappo3","zappo4"]
+      "img": ["zappo1","zappo2","zappo3","zappo4"],
+      "url": "https://www.zappo.fr/",
+      "logo": "zappo_logo.svg",
+      "tags": ["web", "react","express.js","mysql", "passport.js", "material ui", "socket.io"]
     },
       {
       "id": "helloSam",
       "name": "helloSam",
-      "img": ["helloSam1","helloSam2","helloSam3"]
+      "img": ["helloSam1","helloSam2","helloSam3"],
+      "url": "https://www.1kprod.com/works/hellosam",
+      "logo": "helloSam_logo.png",
+      "tags": ["mobile","web","react","react native","firebase", "stripe"]
     },
       {
       "id": "playSuisse",
       "name": "play Suisse",
-      "img": ["coming-soon"]
+      "img": ["coming-soon"],
+      "logo": "playSuisse_logo.png",
+      "url": "https://www.playsuisse.ch",
+      "tags": ["mobile","react native", "Xcode", "android studio", "graphQl"]
     },
       {
       "id": "smarthab",
       "name": "smartHab virtual home",
-      "img": ["virtualDemonstrator1","virtualDemonstrator2"]
+      "img": ["virtualDemonstrator1","virtualDemonstrator2"],
+      "logo": "smarthab_logo.png",
+      "url": "https://smarthab.fr/",
+        "tags": ["web","react","socket.io"]
     }
   ]
 }
