--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-awesome-slider": "^4.1.0",
