--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "chart.js": "^3.5.1",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
-    "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
-    "tsparticles": "^1.34.0",
+    "react-tsparticles": "^1.37.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
